--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -7,3 +7,17 @@
 body{
     font-family:'poppins',sans-serif;
 }
+
+body.light {
+    --bg-color: #fff;
+    --text-color: #000;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+body.dark {
+    --bg-color: #000;
+    --text-color: #fff;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
